test/tests/compiler/13_floating-point_numbers/invalid_types/mod_double.plx
pub fn main(none) i32 {
    #  You can't apply the modulo operator to a double 
    d: f64 = 10.0
    d = d % 3
    return 0
}
